--- a/css/customize__styles.css
+++ b/css/customize__styles.css
@@ -83,9 +83,9 @@
 
 .options__container {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 5fr 1fr;
     padding: 2rem;
-    height: 90vh;
+    height: 100%;
     width: 100%;
     max-width: 1300px;
     background-color: #E5BB89;
@@ -111,6 +111,17 @@
     padding-top: 4rem;
     padding-bottom: 2rem;
     color: black;
+}
+
+.input__content {
+    width: 100%;
+    float: left;
+    padding: 2rem;
+}
+.result__content {
+    width: 100%;
+    float: right;
+    padding: 2rem;
 }
 
 label {
@@ -144,6 +155,7 @@ input {
 }
 
 select {
+    position: relative;
     color: white;
     font-size: 1.25rem;
     align-content: center;
@@ -152,3 +164,24 @@ select {
     border: thin solid black;
 }
 
+
+.slider {
+    position: relative;
+    top: 20px;
+    width: 30%;
+    height: 2rem;
+}
+
+output {
+    position: relative;
+    top: 15px;
+    font-size: 2rem;
+    background-color: black;
+    padding-inline: 2rem;
+    background-size: 100%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    -moz-text-fill-color: transparent;
+}
