--- a/css/customize__styles.css
+++ b/css/customize__styles.css
@@ -187,3 +187,12 @@ output {
     -webkit-text-fill-color: transparent;
     -moz-text-fill-color: transparent;
 }
+
+button {
+    font-size: 1.5rem;
+    padding: 1rem;
+    width: 8rem;
+    color: lightgrey;
+    background-image: linear-gradient(to top, black 0%, grey 100%);
+    border-radius: 7px;
+}
