--- a/customize__styles.css
+++ b/customize__styles.css
@@ -113,14 +113,16 @@
     color: black;
 }
 
+.options__container {
+    display: table;
+}
+
 .input__content {
-    width: 100%;
-    float: left;
+    display: inline-block;
     padding: 2rem;
 }
 .result__content {
-    width: 100%;
-    float: right;
+    display: inline-block;
     padding: 2rem;
 }
 
@@ -176,7 +178,7 @@ select {
 
 output {
     position: relative;
-    top: 15px;
+    top: 0px;
     font-size: 2rem;
     background-color: black;
     padding-inline: 2rem;
@@ -191,6 +193,7 @@ output {
 button {
     font-size: 1.5rem;
     padding: 1rem;
+    margin-left: 4rem;
     width: 8rem;
     color: lightgrey;
     background-image: linear-gradient(to top, black 0%, grey 100%);
